--- a/styles/style.css
+++ b/styles/style.css
@@ -89,6 +89,9 @@ iframe#youtube_hero_api{
 .flickity-prev-next-button.previous .flickity-button-icon{
 	left: 4.8vw !important;
 }
+.vjs-youtube .vjs-poster{
+background-image:contain;
+}
 .borderBottomHoverAnim{
 	position: relative;
 	display: inline-block;
