--- a/styles/style.css
+++ b/styles/style.css
@@ -93,7 +93,7 @@ iframe#youtube_hero_api{
 background-size:contain;
 }
 .vjs-control-bar{
-	background-color: rgba(43,51,63,1);
+	background-color: rgba(43,51,63,1) !important;
 }
 .borderBottomHoverAnim{
 	position: relative;
