--- a/styles/style.css
+++ b/styles/style.css
@@ -917,7 +917,7 @@ footer .footerBottom a{
 	.topSection nav .bottomNav{
 		margin: 3% 20%;
 	}
-	.topSection .video .textVideo p.smallTitle, .smallDesc{
+	.topSection .video .textVideo p.smallTitle{
 		font-size: 3vw;
 	}
 	.textVideo button img{
