--- a/styles/style.css
+++ b/styles/style.css
@@ -594,7 +594,8 @@ section.videoSec{
 .gallerySocialMedia .row div{
 	display: inline-block;
 	overflow: hidden;
-	margin-right: 1vw;
+	margin-right: .5vw;
+	margin-left: .5vw;
 	height: 18vw;
 	border-radius: 0.3vw;
 }
