--- a/styles/style.css
+++ b/styles/style.css
@@ -1179,6 +1179,23 @@ footer .footerBottom a{
 	.aboutProductContainer .productCategories{
 		justify-content: initial;
 	}
-
 	.gearSection .flickity-page-dots .dot{bottom:-5vw}
+}
+
+#heroVideoBg,#techVideoBg{
+	  display: block;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 56.15vw;
+    min-height: 100vh;
+    min-width: 177.77vh;
+    transform: scale(1.12);
+}
+#techVideoBg{
+	height: 54vw;
+	transform: scale(1.16);
 }
