--- a/styles/style.css
+++ b/styles/style.css
@@ -27,11 +27,12 @@
 }
 html{
 	overflow-x: hidden;
+  scroll-behavior: smooth;
 }
 body{
 	margin: 0;
 	position: relative;
-	overflow-x:hidden;
+	overflow-x: hidden;
 }
 svg{
 	fill: white;
@@ -47,11 +48,10 @@ a{
 h1,h2,h3,h4,h5,p,i,button{
 	color: #373737;
 }
-iframe#youtube_hero_api{
-	height: 120vh !important;
-	position: absolute;
-	top: -10vh !important;
-	transform: scale(1.15);
+.fade{
+	opacity: 0;
+	cursor: default;
+	transition: .5s;
 }
 .greyTitle{
 	color: #c2c2c2 !important;
@@ -88,12 +88,6 @@ iframe#youtube_hero_api{
 }
 .flickity-prev-next-button.previous .flickity-button-icon{
 	left: 4.8vw !important;
-}
-.vjs-poster{
-  background-size:contain !important;
-}
-.vjs-control-bar{
-	background-color: rgba(43,51,63,1) !important;
 }
 .borderBottomHoverAnim{
 	position: relative;
@@ -135,6 +129,12 @@ p.sectionTitle{
 .zoomAnimationLink:hover{
 	transform: scale(1.15);
 	margin-right: 1.5vw;
+}
+button.playBtn img{
+	transition: .3s;
+}
+button.playBtn img:hover{
+	transform: scale(1.12) !important;
 }
 section:not(:first-child){
 	margin-top: var(--marginSection);
@@ -182,7 +182,7 @@ section:not(:first-child){
 	margin-left: -6vw;
 	text-transform: uppercase;
 	font-family: circularStdBold, sans-serif;
-        font-weight: bolder;
+  font-weight: bolder;
 }
 .topNav p:first-child svg{
 	width: 1.5vw;
@@ -197,10 +197,10 @@ section:not(:first-child){
 }
 .overlayMenuBar{
 	background: rgba(0,0,0,0.5);
-   width: 0;
-   height: 100%;
-   position: fixed;
-   top: 0;
+  width: 0;
+  height: 100%;
+  position: fixed;
+  top: 0;
 }
 .topNav .barMenu{
 	background: none;
@@ -230,6 +230,15 @@ section:not(:first-child){
 	margin: 1% 35%;
 	font-size: var(--fontSize16ViewPort1440);
 	padding: 0;
+	transition: .3s;
+}
+@media screen and (min-width: 700px){
+	.topSection nav .videoPlayNav{
+		border-radius: 5px;
+	  background: rgba(0,0,0,0.7);
+	  margin: 1% 33%;
+	  padding: 1% 2%;
+  }
 }
 .bottomNav li:first-child{
 	display: flex;
@@ -288,8 +297,33 @@ footer ul li a:hover::after{
 	min-height: 500px;
 	height: 100vh;
 }
-.video-js .vjs-big-play-button, .video-js .vjs-picture-in-picture-control, .video .video-js, .video-js .vjs-loading-spinner{
+/*.heroPoster iframe{
+	position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100vw;
+  height: 56.25vw; /* 9/16*100 = 56.25 */
+  min-height: 148vh;
+  min-width: 177.77vh; /* 16/9*100 = 177.77 */
+  z-index: -1;
+}*/
+iframe#player2{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 1;
+	transform: scale(1.2);
+	min-width: 150vh;
+	min-height: 113vh;
+}
+.video .video-js,.video-js .vjs-big-play-button, .video-js .vjs-picture-in-picture-control{
 	display: none;
+}
+.video-js .vjs-loading-spinner{
+	display: none !important;
 }
 .topSection .video .textVideo{
 	text-align: center;
@@ -308,9 +342,22 @@ footer ul li a:hover::after{
   margin-top: 0;
   margin-bottom: 0;
 }
+.topSection .textVideo button{
+	margin-top: 4.167vw;
+}
 .textVideo button{
 	background: none;
-	margin-top: 4.167vw;
+	animation-timing-function: ease;
+  animation-fill-mode: forwards;
+  animation-duration: .3s;
+}
+@keyframes toCenter {
+	0%{
+		transform: translateY(0);
+	}
+	100%{
+		transform: translateY(-100%);
+	}
 }
 .textVideo button img{
 	user-drag: none;
@@ -322,15 +369,16 @@ div.video .poster img{
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
+	transition: .5s;
 }
 .textVideo p,.textVideo h1{
 	color: white;
 	margin-bottom: 9px;
 }
 .video .textVideo h1{
-	font-size: 4.167vw;
-  margin-top: 0;
-  font-family: circularStdBold, sans-serif;
+	  font-size: 4.167vw;
+    margin-top: 0;
+    font-family: circularStdBold, sans-serif;
 }
 .video .textVideo p:last-child{
 	font-size: 1.5vw;
@@ -490,14 +538,13 @@ section.videoSec{
 	background-size: cover;
 	width: 100%;
 	height: 46vw;
-	z-index: 2;
 	position: relative;
 }
 .videoSec .textVideo .playBtn{
 	position: absolute;
   top: 50%;
   transform: translate(-50%,-50%);
-  z-index: 3;
+  z-index: 999;
 }
 /*FOURTH SECTION*/
 .teamSec .carousel-cell img{
@@ -591,8 +638,7 @@ section.videoSec{
 .gallerySocialMedia .row div{
 	display: inline-block;
 	overflow: hidden;
-	margin-right: .5vw;
-	margin-left: .5vw;
+	margin-right: 1vw;
 	height: 18vw;
 	border-radius: 0.3vw;
 }
@@ -661,7 +707,7 @@ footer hr:first-child{
   transform: translateX(-50%) rotate(90deg);
 }
 footer hr.belowLineTitle{
-	width: 32.083vw;
+	width: 30%;
 }
 footer .footerContent{
 	display: flex;
@@ -717,7 +763,7 @@ footer .socialMediaMenuLists{
 	display: flex;
 	position: relative;
 	margin-bottom: 3vw;
-	margin-top: 0;
+	margin-top: 3vw;
 }
 .socialMediaMenuLists .generalInfo{
 	display: flex;
@@ -794,11 +840,6 @@ footer .footerBottom a{
 	color: white;
 }
 /*MEDIA QUERIES*/
-@media screen and (max-height: 600px){
-	.heroPoster{
-		min-height: 700px;
-	}
-}
 @media screen and (min-width: 1700px){
 	.teamSec .carousel-cell img{
 		height: 27vw;
@@ -821,18 +862,18 @@ footer .footerBottom a{
 		font-size: var(--fontSize2497ViewPort1440);
 	}
 	.gearSection .flickity-page-dots .dot{
-		height:.3vw;
+		height: .3vw;
 	}
 }
 @media screen and (max-width: 1000px){
 	.topSection .smallTitle{
-		font-size: 2vw;
+		font-size: 2.5vw;
 	}
 	.video .textVideo h1{
-		font-size: 5vw;
+		font-size: 7vw;
 	}
 	.topSection .smallDesc{
-		font-size: 2vw;
+		font-size: 3vw;
 	}
 	.topSection nav .bottomNav{
 		margin: 2% 20%;
@@ -914,6 +955,9 @@ footer .footerBottom a{
 	}
 	.topSection nav .bottomNav{
 		margin: 3% 20%;
+	}
+	.topSection .video .textVideo p.smallTitle, .smallDesc{
+		font-size: 3vw;
 	}
 	.textVideo button img{
 		width: 10vw;
@@ -1008,19 +1052,15 @@ footer .footerBottom a{
 	.topSection nav .topNav{
 		font-size: 2vw;
 	}
-	.topNav .locationNavBarIcon{
-		width: 2.5vw;
-	}
 	.topNav .logo{
 		flex-grow: 2;
-		max-width: 13vw;
-		left: -3vw;
+		max-width: 12vw;
 	}
 	.topNav .barMenu + a{
 		margin-right: 3vw;
 	}
 	.topNav p:first-child{
-		font-size: 3.5vw;
+		font-size: 3vw;
 	}
 	.topNav p:first-child svg{
 		width: 5vw;
@@ -1028,17 +1068,8 @@ footer .footerBottom a{
 	.topSection video{
 		width: 150%;
 	}
-	.topSection .smallTitle{
-		font-size: 4vw;
-	}
-	.video .textVideo h1{
-		font-size: 7vw;
-	}
-	.topSection .smallDesc{
-		font-size: 3vw;
-	}
 	.textVideo button img{
-		width: 17vw;
+		width: 12vw;
 	}
 	.lineTopSection{
 		width: 20vw;
@@ -1073,6 +1104,9 @@ footer .footerBottom a{
 	.gearSection .carousel .carousel-cell p{
 		font-size: 4vw;
 	}
+	.gearSection .flickity-page-dots {
+		bottom: -5vw;
+   }
 	.flickity-prev-next-button{
 		height: 10vw;
 		width: 12vw;
@@ -1086,9 +1120,9 @@ footer .footerBottom a{
 	.flickity-prev-next-button.previous .flickity-button-icon{
 		left: 6vw !important;
 	}
-	/*.videoSec .poster, .videoSec .video{
+	.videoSec .poster, .videoSec .video{
 		height: 300px;
-	}*/
+	}
 	.teamSec div.teamContent{
 		padding-left: 0;
 		flex-direction: column;
@@ -1179,7 +1213,11 @@ footer .footerBottom a{
 	.aboutProductContainer .productCategories{
 		justify-content: initial;
 	}
-	.gearSection .flickity-page-dots .dot{bottom:-5vw}
+}
+@media screen and (max-width: 500px){
+	/*section.gearSection .carousel .carousel-cell{
+		width: 72%;
+	}*/
 }
 
 #heroVideoBg,#techVideoBg{
