--- a/styles/style.css
+++ b/styles/style.css
@@ -296,6 +296,8 @@ footer ul li a:hover::after{
 	z-index: 99;
 	min-height: 500px;
 	height: 100vh;
+	/*min-width: 177.77vh;*/
+	width: 100vw;
 }
 /*.heroPoster iframe{
 	position: absolute;
@@ -1224,12 +1226,11 @@ footer .footerBottom a{
 	display: block;
 	z-index: -1;
 	width: 100%;
-	height: 100%;
+	height: 120%;
 	position: absolute;
 	top: 0;
 	left: 0;
-	height: 56vw;
-	transform: scale(1.25);
+	transform: scale(1.5);
 }
 #techVideoBg{
 	height: 54vw;
