--- a/styles/style.css
+++ b/styles/style.css
@@ -881,6 +881,10 @@ footer .footerBottom a{
 	}
 }
 @media screen and (max-width: 1000px){
+	.video .heroPoster{
+		height: 59vw;
+		min-height: auto;
+	}
 	.topSection .smallTitle{
 		font-size: 2.5vw;
 	}
@@ -945,8 +949,7 @@ footer .footerBottom a{
 
 @media screen and (max-width: 800px){
 	.video .heroPoster{
-		height: 43vh;
-		min-height: auto;
+		height: 70vw;
 	}
 	.topNav .locationNavBarIcon{
 		width: 2vw;
