--- a/styles/style.css
+++ b/styles/style.css
@@ -51,7 +51,10 @@ h1,h2,h3,h4,h5,p,i,button{
 .fade{
 	opacity: 0;
 	cursor: default;
-	transition: .5s;
+	transition: .5s ease;
+	-webkit-transition: .5s ease;
+	-moz-transition: .5s ease;
+	-ms-transition: .5s ease;
 }
 .greyTitle{
 	color: #c2c2c2 !important;
@@ -129,9 +132,6 @@ p.sectionTitle{
 .zoomAnimationLink:hover{
 	transform: scale(1.15);
 	margin-right: 1.5vw;
-}
-button.playBtn img{
-	transition: .3s;
 }
 button.playBtn img:hover{
 	transform: scale(1.12) !important;
@@ -230,7 +230,6 @@ section:not(:first-child){
 	margin: 1% 35%;
 	font-size: var(--fontSize16ViewPort1440);
 	padding: 0;
-	transition: .3s;
 }
 @media screen and (min-width: 700px){
 	.topSection nav .videoPlayNav{
@@ -254,7 +253,6 @@ section:not(:first-child){
 }
 .xMark svg{
 	width: 3.5vw !important;
-	transition: transform .3s ease;
 }
 .xMark:hover svg{
 	transform: rotate(180deg);
@@ -405,7 +403,6 @@ div.video .poster img{
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
-	transition: .5s;
 }
 .textVideo p,.textVideo h1{
 	color: white;
@@ -698,6 +695,9 @@ section.videoSec{
 .gallerySocialMedia img{
 	height: 100%;
 	transition: transform .3s ease;
+	-webkit-transition: transform .3s ease;
+	-moz-transition: transform .3s ease;
+	-ms-transition: transform .3s ease;
 }
 .gallerySocialMedia img:hover{
 	transform: scale(1.1);
