--- a/styles/style.css
+++ b/styles/style.css
@@ -586,11 +586,11 @@ section.videoSec{
 	display: block;
 	z-index: -1;
 	width: 100%;
-	height: 120%;
+	height: 100%;
 	position: absolute;
 	top: 0;
 	left: 0;
-	transform: scale(1.2);
+	transform: scale(1.3);
 }
 #techVideoBg{
 	height: 100%;
@@ -916,6 +916,11 @@ footer .footerBottom a{
 	}
 	.gearSection .flickity-page-dots .dot{
 		height: .3vw;
+	}
+}
+@media screen and (max-width: 1200px){
+	#heroVideoBg{
+		transform: scale(1.4);
 	}
 }
 @media screen and (max-width: 1000px){
