--- a/styles/style.css
+++ b/styles/style.css
@@ -404,6 +404,10 @@ div.video .poster img{
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
+	transition: 1s ease;
+	-webkit-transition: 1s ease;
+	-moz-transition: 1s ease;
+	-ms-transition: 1s ease;
 }
 .textVideo p,.textVideo h1{
 	color: white;
