--- a/styles/style.css
+++ b/styles/style.css
@@ -146,6 +146,13 @@ section:not(:first-child){
 	-o-transition: all .3s ease-in-out;
 	-ms-transition: all .3s ease-in-out;
 }
+.softAnimationLong{
+	transition: all 1s ease-in-out;
+	-webkit-transition: all 1s ease-in-out;
+	-moz-transition: all 1s ease-in-out;
+	-o-transition: all 1s ease-in-out;
+	-ms-transition: all 1s ease-in-out;
+}
 .topSection nav{
 	position: absolute;
 	display: block;
@@ -569,10 +576,6 @@ section.videoSec{
 	width: 100%;
 	height: 46vw;
 	position: relative;
-	transition:1s ease;
-	-webkit-transition:1s ease;
-	-moz-transition:1s ease;
-	-ms-transition:1s ease;
 }
 .videoSec .textVideo .playBtn{
 	position: absolute;
